Changing LLM to ollama pull deepseek-coder:6.7b

--- a/.env.example
+++ b/.env.example
@@ -1,65 +1,27 @@
-# -----------------------------------------------------------------------------
-# Example Environment Configuration
-#
-# Copy this file to .env and customize the settings for your environment.
-# This file provides a template for all the necessary configuration variables
-# for the LLM Document Intelligence System.
-# -----------------------------------------------------------------------------
-
-# --- General Application Settings ---
-# Set the environment to 'development', 'staging', or 'production'
-ENVIRONMENT=development
-# Enable or disable debug mode
+# Application Configuration
+APP_NAME="AI Document Intelligence System"
 DEBUG=true
-# Set the logging level (e.g., DEBUG, INFO, WARNING, ERROR)
-LOG_LEVEL=INFO
-# A strong, unique secret key for signing JWTs and other security features.
-# IMPORTANT: Change this in production!
-SECRET_KEY="a-very-secure-and-long-secret-key-that-you-must-change"
+SECRET_KEY=your-super-secret-key-change-this-in-production
 
-# --- Server Configuration ---
-HOST=0.0.0.0
-PORT=8000
-# Number of worker processes for the application server (e.g., Gunicorn)
-WORKERS=4
+# Database (SQLite for development)
+DATABASE_URL=sqlite+aiosqlite:///./document_intelligence.db
 
-# --- CORS (Cross-Origin Resource Sharing) Settings ---
-# Comma-separated list of allowed origins
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+# Local LLM Configuration (Ollama)
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.2:3b
+# Alternative models you can use:
+# OLLAMA_MODEL=qwen2.5:7b
+# OLLAMA_MODEL=llama3.2:1b
 
-# --- Database Configuration ---
-DATABASE_URL=postgresql+asyncpg://postgres:password@localhost:5432/document_intelligence
-DATABASE_POOL_SIZE=10
-DATABASE_MAX_OVERFLOW=20
+# Remove or comment out OpenAI/Azure keys - not needed!
+# OPENAI_API_KEY=
+# AZURE_OPENAI_API_KEY=
 
-# --- Redis Configuration ---
-REDIS_URL=redis://localhost:6379/0
-REDIS_PASSWORD=
+# CORS Settings
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+ALLOWED_HOSTS=localhost,127.0.0.1
 
-# --- Azure OpenAI Configuration ---
-# Your Azure OpenAI API key
-AZURE_OPENAI_API_KEY="your-azure-openai-api-key"
-# Your Azure OpenAI endpoint URL
-AZURE_OPENAI_ENDPOINT="https://your-resource.openai.azure.com"
-# The API version to use
-AZURE_OPENAI_API_VERSION=2023-12-01-preview
-# The name of your model deployment
-AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4-turbo
-
-# --- Azure Document Intelligence Configuration ---
-# Your Azure Document Intelligence API key
-AZURE_DOCUMENT_INTELLIGENCE_KEY="your-azure-document-intelligence-key"
-# Your Azure Document Intelligence endpoint URL
-AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT="https://your-resource.cognitiveservices.azure.com"
-
-# --- Authentication Settings ---
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# --- File Upload Configuration ---
-# Maximum file size in megabytes
-MAX_FILE_SIZE_MB=50
-# Directory for temporary file uploads
-UPLOAD_DIRECTORY=/tmp/uploads
-# Comma-separated list of allowed file extensions
-ALLOWED_FILE_EXTENSIONS=.pdf,.docx,.jpg,.png
-
+# File Upload Settings
+MAX_FILE_SIZE=52428800
+UPLOAD_DIRECTORY=./uploads
+PROCESSED_FILES_DIRECTORY=./processed
