--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,37 @@
-# --- Core Web Framework ---
-fastapi==0.110.0
-uvicorn[standard]==0.23.2
-gunicorn==21.2.0
-
-# --- Authentication and Security ---
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+# Core Framework
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 
-# --- Database (PostgreSQL + Async) ---
+# Database & ORM
 sqlalchemy[asyncio]==2.0.23
-asyncpg==0.29.0
+aiosqlite==0.19.0
 alembic==1.13.0
-greenlet==3.0.1
 
-# --- Redis (Caching and Queuing) ---
-redis[hiredis]==5.0.1
+# Local LLM Integration
+langchain==0.0.348
+langchain-community==0.0.348
+ollama==0.1.7
+httpx==0.25.2
 
-# --- Azure AI Services ---
-azure-ai-documentintelligence==1.0.0b1
-azure-core==1.29.5
+# Document Processing
+PyPDF2==3.0.1
+python-docx==0.8.11
+Pillow==10.1.0
+pytesseract==0.3.10
 
-# --- LangChain and LLM Integrations ---
-langchain==0.1.5
-langchain-openai==0.0.5
-langchain_core==0.1.20
+# Authentication & Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
 
-# --- Data Validation ---
-pydantic==2.5.3
+# Configuration & Validation
+pydantic==2.5.2
 pydantic-settings==2.1.0
-
-# --- Configuration ---
 python-dotenv==1.0.0
 
-# --- Testing ---
-pytest==7.4.3
-pytest-asyncio==0.23.2
-httpx==0.25.2
-pytest-cov==4.1.0
+# File Processing
+aiofiles==23.2.1
 
-# --- Development and Code Quality ---
-black==23.12.1
-isort==5.13.2
-flake8==7.0.0
-mypy==1.8.0
-ruff==0.1.9
+# Development & Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
