--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,85 @@
+# ==============================================================================
+# Render.com Deployment Configuration
+# Free tier deployment for Roneira AI Document Intelligence
+# ==============================================================================
+
 services:
+  # Main web service
   - type: web
-    name: document-intelligence-api
-    env: python
+    name: roneira-ai
+    env: docker
+    dockerfilePath: ./Dockerfile.free
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
+    region: oregon
+    buildCommand: |
+      echo "Building Roneira AI Free Version..."
+      pip install --no-cache-dir -r requirements-free.txt
+    startCommand: |
+      python main_free.py
+    healthCheckPath: /health
     envVars:
+      - key: ENVIRONMENT
+        value: production
+      - key: PORT
+        value: 8000
+      - key: HOST
+        value: 0.0.0.0
+      - key: DATABASE_URL
+        value: sqlite+aiosqlite:///./data/roneira.db
       - key: SECRET_KEY
         generateValue: true
-      - key: DATABASE_URL
-        fromDatabase:
-          name: document-intelligence-db
+      - key: USE_LOCAL_LLM
+        value: false
+      - key: OCR_ENGINE
+        value: tesseract
+      - key: MAX_FILE_SIZE_MB
+        value: 25
+      - key: ALLOWED_ORIGINS
+        value: "*"
+      - key: DEEPSEEK_API_KEY
+        sync: false  # Set manually in Render dashboard
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: roneira-redis
           property: connectionString
-      - key: OPENAI_API_KEY
-        sync: false
 
-databases:
-  - name: document-intelligence-db
+  # Redis service
+  - type: redis
+    name: roneira-redis
     plan: free
+    region: oregon
+    maxmemoryPolicy: allkeys-lru
+
+  # Background worker (optional)
+  - type: worker
+    name: roneira-worker
+    env: docker
+    dockerfilePath: ./Dockerfile.free
+    plan: free
+    region: oregon
+    startCommand: |
+      python -c "print('Background worker ready')"
+    envVars:
+      - key: ENVIRONMENT
+        value: production
+      - key: WORKER_TYPE
+        value: document_processor
+      - key: DATABASE_URL
+        value: sqlite+aiosqlite:///./data/roneira.db
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: roneira-redis
+          property: connectionString
+
+databases: []
+
+# Static site for frontend (if separate)
+# - type: static_site
+#   name: roneira-frontend
+#   buildCommand: npm run build
+#   publishPath: ./dist
+#   envVars:
+#     - key: REACT_APP_API_URL
+#       value: https://roneira-ai.onrender.com
