--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,74 @@
-# Core Framework
+# Core FastAPI and web framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+pydantic==2.5.0
+pydantic-settings==2.1.0
 
-# Database & ORM
-sqlalchemy[asyncio]==2.0.23
-aiosqlite==0.19.0
-alembic==1.13.0
-
-# Local LLM Integration
-langchain==0.0.348
-langchain-community==0.0.348
-ollama==0.1.7
-httpx==0.25.2
-
-# Document Processing
-PyPDF2==3.0.1
-python-docx==0.8.11
-Pillow==10.1.0
-pytesseract==0.3.10
-
-# Authentication & Security
+# Authentication and Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
 
-# Configuration & Validation
-pydantic==2.5.2
-pydantic-settings==2.1.0
+# Database
+sqlalchemy==2.0.23
+aiosqlite==0.19.0
+asyncpg==0.29.0
+alembic==1.13.1
+
+# Redis/Caching
+redis==5.0.1
+aioredis==2.0.1
+
+# Azure Services
+azure-ai-documentintelligence==1.0.0b1
+azure-identity==1.15.0
+azure-core==1.29.5
+
+# OpenAI and Language Models
+openai==1.3.8
+langchain==0.0.340
+langchain-openai==0.0.2
+langchain-community==0.0.1
+
+# HTTP and API clients
+httpx==0.25.2
+aiohttp==3.9.1
+requests==2.31.0
+
+# Rate limiting
+slowapi==0.1.9
+
+# File processing
+Pillow==10.1.0
+pdfplumber==0.10.3
+python-docx==1.1.0
+
+# Utilities
 python-dotenv==1.0.0
+click==8.1.7
+typer==0.9.0
 
-# File Processing
-aiofiles==23.2.1
+# Monitoring and logging
+structlog==23.2.0
+prometheus-client==0.19.0
 
-# Development & Testing
+# Testing (dev dependencies)
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+httpx==0.25.2  # for testing FastAPI
+
+# Code quality
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0
+mypy==1.7.1
+
+# Production server
+gunicorn==21.2.0
+
+# WebSocket support
+websockets==12.0
+
+# JSON handling
+orjson==3.9.10
