Fix requirements.txt: Remove duplicates and consolidate Redis client
- Remove duplicate httpx declaration
- Remove aioredis (functionality included in redis>=4.0)
- Add hiredis extension for better Redis performance
- Add comments explaining HTTP client usage
- Keep Azure beta version with comment about stability

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,8 @@ aiosqlite==0.19.0
 asyncpg==0.29.0
 alembic==1.13.1
 
-# Redis/Caching
-redis==5.0.1
-aioredis==2.0.1
+# Redis/Caching (unified Redis client with async support)
+redis[hiredis]==5.0.1
 
 # Azure Services
 azure-ai-documentintelligence==1.0.0b1
@@ -31,9 +30,9 @@ langchain-openai==0.0.2
 langchain-community==0.0.1
 
 # HTTP and API clients
-httpx==0.25.2
-aiohttp==3.9.1
-requests==2.31.0
+httpx==0.25.2  # Async HTTP client for FastAPI and testing
+aiohttp==3.9.1  # Alternative async HTTP client (if needed for specific services)
+requests==2.31.0  # Sync HTTP client for simple operations
 
 # Rate limiting
 slowapi==0.1.9
@@ -56,7 +55,6 @@ prometheus-client==0.19.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-httpx==0.25.2  # for testing FastAPI
 
 # Code quality
 black==23.11.0
