--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,11 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 MAX_FILE_SIZE=52428800
 UPLOAD_DIRECTORY=./uploads
 PROCESSED_FILES_DIRECTORY=./processed
+
+
+# RAG Configuration
+EMBEDDING_MODEL=all-MiniLM-L6-v2
+VECTOR_STORE_PATH=./chroma_db
+CHUNK_SIZE=1000
+CHUNK_OVERLAP=200
+MAX_CONVERSATION_HISTORY=10
