--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,24 @@ version: '3.8'
 
 services:
   # ------------------------------------------------------------------------------
+  # Frontend Service
+  # ------------------------------------------------------------------------------
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    container_name: llm-doc-intelligence-frontend
+    restart: unless-stopped
+    ports:
+      - "3000:80"
+    depends_on:
+      - app
+    networks:
+      - llm_network
+
+  # ------------------------------------------------------------------------------
   # Application Service (Backend)
+
   #
   # This service runs the FastAPI backend application.
   # ------------------------------------------------------------------------------
@@ -32,6 +49,7 @@ services:
       - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-password}@postgres:5432/${POSTGRES_DB:-document_intelligence}
       - REDIS_URL=redis://${REDIS_PASSWORD:-password}@redis:6379/0
       - SECRET_KEY=${SECRET_KEY:-a-dev-secret-key}
+      - OLLAMA_BASE_URL=http://host.docker.internal:11434
     volumes:
       # Mounts the current directory to /app in the container for development.
       - .:/app
@@ -43,6 +61,8 @@ services:
         condition: service_healthy
     networks:
       - llm_network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     # Health check to ensure the service is running correctly.
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
