--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     "noImplicitThis": true,
     "alwaysStrict": true,
     // --- Additional Checks ---
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     // --- Module Resolution Options ---
