feat(ops): setup comprehensive dev env, testing, and documentation standards
Implemented Bootcamp Standards including C4, ADRs, Deployment guides, and Master AI Context.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "rollup-plugin-visualizer": "^6.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-tsconfig-paths": "^6.0.4"
+    "vite-tsconfig-paths": "^6.0.4",
+    "cypress": "^13.6.0",
+    "@playwright/test": "^1.40.0",
+    "selenium-webdriver": "^4.16.0"
   }
 }
