--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,12 @@ prometheus-client==0.19.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
+Faker>=20.0.0
+hypothesis>=6.90.0
+mutmut>=2.4.4
+scikit-learn>=1.3.2
+selenium>=4.15.0
+debugpy>=1.8.0
 
 # Code quality
 black==23.11.0
