--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ python-multipart==0.0.9
 # Database
 sqlalchemy==2.0.23
 aiosqlite==0.19.0
-asyncpg==0.29.0
+# asyncpg==0.29.0
 alembic==1.13.1
 
 # Redis/Caching (unified Redis client with async support)
@@ -25,9 +25,10 @@ redis[hiredis]==5.0.1
 openai==1.30.1
 
 # LangChain for RAG and document processing
-langchain==0.2.5
+langchain==0.2.14
 langchain-openai==0.1.8
-langchain-community==0.2.5
+langchain-community==0.2.12
+langchain-core==0.2.33
 
 # RAG Pipeline (Vector Search & Embeddings)
 sentence-transformers>=2.2.0
@@ -39,10 +40,10 @@ tiktoken>=0.5.0
 httpx==0.25.2
 
 # Rate limiting
-slowapi==0.1.9
+slowapi>=0.1.9
 
 # File processing
-Pillow==10.1.0
+Pillow>=10.1.0
 pdfplumber==0.10.3
 python-docx==1.1.0
 python-magic==0.4.27
