--- a/package.json
+++ b/package.json
@@ -31,21 +31,22 @@
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "cypress": "^13.6.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "rollup-plugin-visualizer": "^6.0.5",
+    "selenium-webdriver": "^4.16.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-tsconfig-paths": "^6.0.4",
-    "cypress": "^13.6.0",
-    "@playwright/test": "^1.40.0",
-    "selenium-webdriver": "^4.16.0"
+    "vite-tsconfig-paths": "^6.0.4"
   }
 }
